# Artemis-IL

./: Artemis IL.sln  README.md
.github/workflows/: ci.yml  publish-wiki.yml
docs/: Specification.docx  index.md
examples/: calculator.ail  hello_world_db.ail
source/: AIL-Runtime.sln
source/AIL-CPP/: CMakeLists.txt
source/AIL-CPP/include/ail/: address_mode.hpp  config.hpp  executable.hpp  opcodes.hpp  registers.hpp
source/AIL-CPP/include/ail/compiler/: build_exception.hpp  instruction.hpp
source/AIL-CPP/include/ail/vm/: call_stack.hpp  kernel_interrupts.hpp  ram.hpp  software_interrupts.hpp  vm.hpp
source/AIL-CPP/src/vm/: kernel_interrupts.cpp  software_interrupts.cpp  vm_ops.cpp
source/AIL-CPP/tests/: io_capture.cpp  io_capture.hpp  main.cpp  test_compiler.cpp  test_executable.cpp  test_framework.hpp  test_round_trip.cpp  test_vm.cpp
source/AIL-Runtime/: AIL-Runtime.csproj  AR-Console.cs  Program.cs
source/AIL-Studio/: AIL-Studio.csproj  DebugForm.cs  MainForm.cs  Program.cs  StudioConsole.cs
source/AIL-Studio/Compiler/: AddressModes.cs  BuildException.cs  CharValue.cs  Compiler.cs  Instruction.cs  Registers.cs
source/AIL-Studio/Decompiler/: AddressModes.cs  Decompiler.cs  Instruction.cs  Registers.cs
source/AIL-Tests/: AIL-Tests.csproj  CompilerTests.cs  RoundTripTests.cs  TestConsole.cs  VmCollection.cs  VmExecutionTests.cs
source/Artemis-VM/: Executable.cs  Global_Settings.cs
source/Artemis-VM/ArrayConversions/: BoolArray.cs  ByteArray.cs
source/Artemis-VM/VConsoleHandlers/: NullConsole.cs  VirtualConsole.cs
source/Artemis-VM/VM/: BitOps.cs  CallStack.cs  RAM.cs  VM.cs  VMextended.cs
source/Artemis-VM/func/: op.cs
source/Artemis-VM/std_lib/: KernelInterrupts.cs  SoftwareInterrupts.cs
wiki/: CPP-Port.md  Home.md  Specification.md  Standard-Library.md
